--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="style.css" />
         <meta charset="utf-8">
-        <title>Yew Sample App</title>
+        <title>Biscuit tokens playground by Clever Cloud</title>
         <script type="module">
             import init from "./wasm.js"
             init()
