--- a/static/editor.html
+++ b/static/editor.html
@@ -25,6 +25,13 @@
     </textarea>
 
     <script type="text/javascript" src="/editor.js"></script>
+  <script type="text/javascript">
+    let cm = new CodeMirror.fromTextArea(document.getElementById("editor"), {
+      mode: 'biscuit',
+      autoCloseTags: true,
+      lineNumbers: true
+    });
+    </script>
   </body>
 </html>
 
