--- a/static/index.html
+++ b/static/index.html
@@ -33,10 +33,10 @@
                   phase, all of the checks must succeed.
                 </p>
                 <p>On the verifier's side, you can define a list of "allow" or "deny"
-                policies, that will be tred one by one until one of them matches</p>
+                policies, that will be tried one by one until one of them matches.</p>
                 <p>Test the behaviour of the example token by activating or
                   deactivating blocks or their data, changing conditions (like
-                  <em>#read</em> operation to <em>#write</em> and see how the verifier will react)</p>
+                  <em>#read</em> operation to <em>#write</em> and see how the verifier will react).</p>
             </div>
 
             <div id="token" class="container">
