--- a/static/index.html
+++ b/static/index.html
@@ -14,6 +14,7 @@
             init()
             */
         </script>
+      <script type="module" src="/demo.js"></script>
     </head>
     <body>
       <div>
@@ -41,8 +42,8 @@
 
             <div id="token" class="container">
                 <h3>Token</h3>
-                <ul id="block-list">
-                    <li><button onclick="add_block()">Add Block</button></li>
+                <ul class="block-list">
+                    <li><button onclick="add_block('#biscuit-wrapper', '')">Add Block</button></li>
                 </ul>
                 <div class="sub-container">
                     <em>Token content</em>
@@ -53,7 +54,7 @@
                         size="45"
                         value ="self.token.serialized.as_deref().unwrap_or"
                         />-->
-                    <pre id="token-content">
+                    <pre class="token-content">
                     </pre>
                 </div>
             </div>
@@ -62,28 +63,30 @@
 
               <div class="sub-container">
                   <textarea
-                      class="code"
-                      id="verifier-code"
-                      oninput="contentUpdate()"
+                      class="code verifier-code"
+                      oninput="contentUpdate('#biscuit-wrapper')"
                   ></textarea>
               </div>
 
               <div class="sub-container">
                   <h4>Verifier result</h4>
-                  <p id="verifier-result">
+                  <p class="verifier-result">
                   </p>
 
                   <h4>Verifier content</h4>
                   <p>This is all of the data, rules, checks and policies
                   that the verifier works with, after having applied all
                   of the rules:</p>
-                  <pre id="verifier-world"></pre>
+                  <pre class="verifier-world"></pre>
               </div>
 
           </div>
         </div>
-    </div>  
-    <script type="module" src="/demo.js"></script>
+      </div>
+    <script type="module">
+        import { setup } from "./demo.js"
+        setup("#biscuit-wrapper");
+    </script>
 
     </body>
 </html>
