--- a/static/index.html
+++ b/static/index.html
@@ -80,6 +80,16 @@
                   <pre class="verifier-world"></pre>
               </div>
 
+              <div class="sub-container">
+                  <h4>Query</h4>
+                  <input type="text" class="query" size="50"
+                      oninput="contentUpdate('#biscuit-wrapper')"
+                      value="right($path, $kind) <- right(#authority, $path, $kind)"
+                  ></input>
+                  <pre class="query-result"></pre>
+
+              </div>
+
           </div>
         </div>
       </div>
