support error hilighting

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="/codemirror/addon/lint/lint.css">
         <script type="text/javascript" src="/codemirror/lib/codemirror.js"></script>
         <script type="text/javascript" src="/codemirror/addon/mode/simple.js"></script>
+        <script type="text/javascript" src="/codemirror/addon/lint/lint.js"></script>
         <script type="text/javascript" src="/editor.js"></script>
         <meta charset="utf-8">
         <title>Biscuit tokens playground by Clever Cloud</title>
