--- a/static/index.html
+++ b/static/index.html
@@ -10,11 +10,6 @@
         <script type="text/javascript" src="/editor.js"></script>
         <meta charset="utf-8">
         <title>Biscuit tokens playground by Clever Cloud</title>
-        <script type="module">
-          /*import init from "./wasm.js"
-            init()
-            */
-        </script>
       <script type="module" src="/demo.js"></script>
     </head>
     <body>
@@ -80,12 +75,6 @@
                   <h4>Verifier result</h4>
                   <p class="verifier-result">
                   </p>
-
-                  <h4>Verifier content</h4>
-                  <p>This is all of the data, rules, checks and policies
-                  that the verifier works with, after having applied all
-                  of the rules:</p>
-                  <pre class="verifier-world"></pre>
               </div>
 
               <div class="sub-container">
@@ -95,7 +84,14 @@
                       value="right($path, $kind) <- right(#authority, $path, $kind)"
                   ></input>
                   <pre class="query-result"></pre>
+              </div>
 
+              <div class="sub-container">
+                  <h4>Verifier content</h4>
+                  <p>This is all of the data, rules, checks and policies
+                  that the verifier works with, after having applied all
+                  of the rules:</p>
+                  <pre class="verifier-world"></pre>
               </div>
 
           </div>
@@ -133,7 +129,7 @@
 `// this is a fact, the basic data used in Datalog
 // you can see it as one line in the "right" table
 // facts with #authority can only be in the first block
-right(#authority, "/folder1/file1", $read);
+right(#authority, "/folder1/file1", #read);
 right(#authority, "/folder1/file1", #write);
 right(#authority, "/folder2/file1", #read);
 
