show the facts as tables

--- a/static/index.html
+++ b/static/index.html
@@ -88,9 +88,8 @@
 
               <div class="sub-container">
                   <h4>Verifier content</h4>
-                  <p>This is all of the data, rules, checks and policies
-                  that the verifier works with, after having applied all
-                  of the rules:</p>
+                  <p>This is the data that the verifier works with, after having applied
+                  the rules:</p>
                   <pre class="verifier-world"></pre>
               </div>
 
