add more explication text

--- a/static/index.html
+++ b/static/index.html
@@ -79,6 +79,7 @@
 
               <div class="sub-container">
                   <h4>Query</h4>
+                  <p>Here you can write a query (in rule format) to extract data from the verifier</p>
                   <input type="text" class="query" size="50"
                       oninput="contentUpdate('#biscuit-wrapper')"
                       value="right($path, $kind) <- right(#authority, $path, $kind)"
